--- a/description
+++ b/description
@@ -41,3 +41,9 @@ Writer Stoped By Attacker
 Number of Packets generated:  2423
 Time to generate Packets: 8.164340496063232
 
+Attack number 7
+fakeClientID
+- BREAK - with  730  successful attacks
+Writer Stoped By Attacker
+Number of Packets generated:  2220
+Time to generate Packets: 4.4851295948028564
