--- a/description
+++ b/description
@@ -43,7 +43,9 @@ Time to generate Packets: 8.164340496063232
 
 Attack number 7
 fakeClientID
-- BREAK - with  730  successful attacks
+Attacker  - BREAK - with  768  successful attacks
 Writer Stoped By Attacker
-Number of Packets generated:  2220
-Time to generate Packets: 4.4851295948028564
+Number of Packets generated:  2282
+Time to generate Packets: 5.11111044883728
+Writer Exiting
+
