--- a/description
+++ b/description
@@ -49,3 +49,8 @@ Number of Packets generated:  2282
 Time to generate Packets: 5.11111044883728
 Writer Exiting
 
+Attack number 8
+Attacker  - BREAK - with  735  successful attacks
+Writer Stoped By Attacker
+Number of Packets generated:  2183
+Time to generate Packets: 4.5219407081604
